<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.yunusov.weatherapplication.presentation.weather.WeatherViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context=".presentation.weather.WeatherFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startIndentGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/small_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endIndentGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/small_margin" />

            <TextView
                android:id="@+id/nameCityTextView"
                style="@style/value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@{viewModel.cityName}"
                app:layout_constraintEnd_toStartOf="@+id/editImageView"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ульяновск" />

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="@dimen/width_icon_action"
                android:layout_height="@dimen/width_icon_action"
                android:contentDescription="@string/desc_edit_image"
                android:onClick="@{() -> viewModel.editCityName()}"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/nameCityTextView"
                app:layout_constraintEnd_toStartOf="@+id/endIndentGuideline"
                app:layout_constraintTop_toTopOf="@+id/nameCityTextView" />

            <TextView
                android:id="@+id/tempTextView"
                style="@style/mainTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.currentForecast.main.tempWithDegree}"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/nameCityTextView"
                tools:text="14 °C" />

            <TextView
                android:id="@+id/feelsLikeTextView"
                style="@style/bold_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.currentForecast.main.feelsLikeWithDegree}"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/tempTextView"
                tools:text="Ощущается как 7°C" />

            <TextView
                android:id="@+id/weatherTextView"
                style="@style/bold_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:text="@{viewModel.currentForecast.description}"
                app:layout_constraintEnd_toStartOf="@+id/endIndentGuideline"
                app:layout_constraintStart_toEndOf="@+id/feelsLikeTextView"
                app:layout_constraintTop_toBottomOf="@+id/iconImageView"
                tools:text="Не большой Дождь" />

            <View
                android:id="@+id/section1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/big_margin"
                android:background="@drawable/divider_drawable"
                app:layout_constraintTop_toBottomOf="@id/weatherTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todayWeatherRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:adapter="@{viewModel.todayWeatherRecyclerViewAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/section1" />

            <View
                android:id="@+id/section2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/divider_drawable"
                app:layout_constraintTop_toBottomOf="@id/todayWeatherRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weekWeatherRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adapter="@{viewModel.weekWeatherRecyclerViewAdapter}"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toStartOf="@+id/endIndentGuideline"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/section2" />

            <View
                android:id="@+id/section3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_drawable"
                app:layout_constraintBottom_toBottomOf="@id/weekWeatherRecyclerView" />

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="@dimen/weight_icon"
                android:layout_height="@dimen/weight_icon"
                android:layout_marginStart="@dimen/middle_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:contentDescription="@string/desc_main_icon"
                android:src="@{viewModel.mainIcon}"
                app:layout_constraintEnd_toStartOf="@+id/endIndentGuideline"
                app:layout_constraintStart_toEndOf="@+id/feelsLikeTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameCityTextView" />

            <TextView
                android:id="@+id/titleNowTextView"
                style="@style/bold_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/now"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/weekWeatherRecyclerView" />

            <TextView
                android:id="@+id/titleHumidityTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/title_humidity"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/titleNowTextView" />

            <TextView
                android:id="@+id/titlePressureTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/title_pressure"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/titleHumidityTextView" />

            <TextView
                android:id="@+id/cloudsTitleTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/title_clouds"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/titlePressureTextView" />

            <TextView
                android:id="@+id/titleVisibilityTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/title_visibility"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/cloudsTitleTextView" />

            <TextView
                android:id="@+id/tittlePopTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/title_pop"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@id/titleVisibilityTextView" />

            <TextView
                android:id="@+id/humidityTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.main.humidityWithPercent}"
                app:layout_constraintBaseline_toBaselineOf="@id/titleHumidityTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="75%" />

            <TextView
                android:id="@+id/pressureTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.main.pressureString}"
                app:layout_constraintBaseline_toBaselineOf="@id/titlePressureTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="1000 мбар" />

            <TextView
                android:id="@+id/cloudsTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.cloudsString}"
                app:layout_constraintBaseline_toBaselineOf="@id/cloudsTitleTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="100%" />

            <TextView
                android:id="@+id/visibilityTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.visibilityString}"
                app:layout_constraintBaseline_toBaselineOf="@id/titleVisibilityTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="10 км" />

            <TextView
                android:id="@+id/popTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.popString}"
                app:layout_constraintBaseline_toBaselineOf="@id/tittlePopTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="40 %" />

            <TextView
                android:id="@+id/titleWindTextView"
                style="@style/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/middle_margin"
                android:text="@string/title_wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/startIndentGuideline"
                app:layout_constraintTop_toBottomOf="@+id/tittlePopTextView" />

            <TextView
                android:id="@+id/windTextView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@{viewModel.currentForecast.windString}"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleWindTextView"
                app:layout_constraintStart_toEndOf="@+id/tittlePopTextView"
                tools:text="6.79 м/с" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.stateProgressBar}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/mainGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.stateMainGroup}"
                app:constraint_referenced_ids="nameCityTextView,
            tempTextView, feelsLikeTextView, iconImageView,
            weatherTextView, todayWeatherRecyclerView,
            weekWeatherRecyclerView, titleHumidityTextView,
            titleNowTextView,titlePressureTextView, titleVisibilityTextView,
            cloudsTitleTextView, tittlePopTextView,titleWindTextView,
            pressureTextView, visibilityTextView, cloudsTextView, popTextView,
            windTextView, humidityTextView, section1, section2, section3, editImageView" />

            <Button
                android:id="@+id/solveErrorButton"
                style="@style/usualButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.enterSolveErrorBtn()}"
                android:text="@{viewModel.textSolveBtn}"
                android:visibility="@{viewModel.stateSolveErrorBtn}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>